--- a/app/globals.css
+++ b/app/globals.css
@@ -694,19 +694,9 @@ body {
   background: #fff;
 }
 #photo {
-  background: #ff3b7c;
+  background: #fff;  
 }
-#photo .more {
-  background: #eee8e0;
-  font-size: 20px;
-  border-radius: 1.8rem;
-  padding: 8px;
-}
-#photo .more:hover,
-#photo .more :focus {
-  color: #fff;
-  box-shadow: inset 0 0 0 2em #1d2528;
-}
+
 #map {
   background: #fff;
   width: 400px;
